// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadMoreRow matches snapshot in both states: loading 1`] = `
<div>
  <tr>
    <td
      class="px-6 py-4"
      colspan="4"
    >
      <button
        class="w-full justify-center flex items-center text-blue-600 hover:text-blue-800"
      >
        <div
          class="size-5 border-2 border-blue-600 border-t-transparent rounded-full animate-spin"
        />
      </button>
    </td>
  </tr>
</div>
`;

exports[`LoadMoreRow matches snapshot in both states: normal 1`] = `
<div>
  <tr>
    <td
      class="px-6 py-4"
      colspan="4"
    >
      <button
        class="w-full justify-center flex items-center text-blue-600 hover:text-blue-800"
      >
        Load More
      </button>
    </td>
  </tr>
</div>
`;
